plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

springBoot {
    mainClass = 'cherry.callgraph.Main'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:unchecked', '-Xlint:deprecation']
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.boot:spring-boot-dependencies:3.5.4'
    }
    dependencies {
        dependency 'com.ibm.wala:com.ibm.wala.core:1.6.10'
        dependency 'com.ibm.wala:com.ibm.wala.util:1.6.10'
        dependency 'com.ibm.wala:com.ibm.wala.shrike:1.6.10'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'com.ibm.wala:com.ibm.wala.core'
    implementation 'com.ibm.wala:com.ibm.wala.util'
    implementation 'com.ibm.wala:com.ibm.wala.shrike'
    implementation 'jakarta.annotation:jakarta.annotation-api'
}
